# speex4j

./: build.gradle  gradle.properties  readme.md  settings.gradle
.github/workflows/: release.yml
native/: CMakeLists.txt
native/cmake/speex/: CMakeLists.txt  speexdsp_config_types.h
native/src/: agc.c
src/main/java/de/maxhenkel/speex4j/: AutomaticGainControl.java  LibraryLoader.java  Speex.java  UnknownPlatformException.java
src/test/java/de/maxhenkel/rnnoise4j/: AutomaticGainControlTest.java
src/test/java/de/maxhenkel/speex4j/: AutomaticGainControlTest.java
